
* 2019

  post-release improvements
    - improved parse_args; with quotes and escape now; used in fork and macros

* 2019, jan, v1.1.23

  last RC fixes
    - less logs; cmdline, do not move over the end; setenv
    - coverity scan, some fixes
    - palette samples and some minor fixes, rotate, execvp
    - remove interactive shell (ish); rename parse_open to cp_name2open (Alt-x); LOGs cleanup, a lot
    - diff engine for hgdiff/gitdiff, plus optinal argument and simplification; fix for diff calls (BSD), plus correction of try_add_file; lot of unittests
    - fixed COLORS vs 8 mistake; tabhead update on ring size change; internal gitdiff as hgdiff, plus pattern fixes

* 2018, nov-dec, v0.9.97

  features:
    - internal: added demo.txt
    - automatic finish_in_fg for macros
    - cmds.txt updated; added demo.txt; tutor.log with scores
    - internal: engine tests completed: lsdir filter_func crlf abbrev frozen01 call_tree
    - internal: ERRLOG for malloc/realloc, ferror, regerror and other errors
    - tracemsg shall disable duplicate lines; lt (load tags) with optional filename
    - dirname/basename/canonicalpath improvements with unit tests
    - hgdiff as function instead of macro
    - F12 is not reserved any more
    - edarc refresh with set_defaults() and set() in rc.c
    - internal: CFLAGS and dependencies
    - edamacro refresh
    - Alt-y and Alt-r for shorthands and switches for ls and ring lists
    - find_window_switch revised (Alt-w) for find/make/sh buffers
    - save/restore project: added focus setting
    - internal: UPD_OPTIM; test tools in ed.c with #ifdef and upd_event/upd_funcname;
      changes in cmd.c up/down/pgup/pgdown/type_cmd and in qoth/sall/hide/tf and process_diff
    - internal: filename abbreviation (statusline) with regression tests
    - internal: propagate truncate line, crlf regression tests
    - added Meta-Left/Meta-Right keys for tabheader
    - show_tabheader and tabhead_macro with changes in optimized/forced updates;