@@ -1,6 +1,6 @@
 .\"
 .\" -*- nroff -*-
-.TH "EDA" "1" "2019-09-29" "1.2.23" ""
+.TH "EDA" "1" "2020-08-28" "1.2.23" ""
 
 .SH "NAME"
 \fBeda\fR \- text editor and analyzer for programmers
