@@ -1,5 +1,5 @@
 .\"
-.TH "EDAMACRO" "5" "2019-09-29" "1.2.23" ""
+.TH "EDAMACRO" "5" "2020-08-28" "1.2.23" ""
 
 .SH "NAME"
 \fBeda\fR \- editor for programmers, the internal function API for macros
